add print scan code

--- a/assets/nk-cream/config.json
+++ b/assets/nk-cream/config.json
@@ -33,7 +33,7 @@
     "26": "[.wav",
     "27": "].wav",
     "28": "enter.wav",
-    "29": "tab.wav",
+    "29": "shift.wav",
     "30": "a-down.wav",
     "31": "s.wav",
     "32": "d.wav",
@@ -90,10 +90,18 @@
     "83": "[.wav",
     "87": "].wav",
     "88": "].wav",
-    "91": null,
-    "92": null,
-    "93": null,
-    "3597": null,
+    "91": "shift.wav",
+    "92": "shift.wav",
+    "93": "shift.wav",
+    "97": "shift.wav",
+    "100": "e.wav",
+    "103": "w.wav",
+    "105": "a-down.wav",
+    "108": "s.wav",
+    "106": "d.wav",
+    "125": "w.wav",
+    "127": "w.wav",
+    "3597": "shift.wav",
     "3612": "shift.wav",
     "3613": "backspace.wav",
     "3637": "i.wav",
@@ -122,7 +130,6 @@
     "61008": "v.wav",
     "61009": "m.wav",
     "61010": "h.wav",
-    "61011": "b.wav",
-    "001": "a-up.wav"
+    "61011": "b.wav"
   }
 }
